--- a/.github/workflows/master_mlchallengemartinlandart.yml
+++ b/.github/workflows/master_mlchallengemartinlandart.yml
@@ -24,10 +24,10 @@ jobs:
         dotnet-version: '5.0.x'
 
     - name: Build with dotnet
-      run: dotnet build --configuration Release ./mercadolibre-challenge
+      run: dotnet build --configuration Release ./mercadolibre-challenge/src/WebUI
 
     - name: dotnet publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp ./mercadolibre-challenge
+      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Run Azure webapp deploy action using publish profile credentials
       uses: azure/webapps-deploy@v2
