yaml update: build all projects, release webapp

--- a/.github/workflows/master_mlchallengemartinlandart.yml
+++ b/.github/workflows/master_mlchallengemartinlandart.yml
@@ -24,7 +24,7 @@ jobs:
         dotnet-version: '5.0.x'
 
     - name: Build with dotnet
-      run: dotnet build --configuration Release ./src/WebUI/WebUI.csproj
+      run: dotnet build --configuration Release
 
     - name: dotnet publish
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp ./src/WebUI/WebUI.csproj
