Fix configuration for running integration tests

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "UseInMemoryDatabase": false,
+  "UseInMemoryDatabase": true,
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=mercadolibre_challengeDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
