Performance test console: Profile algorithm performance with a huge DNA Sequence (2000x2000)

--- a/PerformanceTestConsoleApp/PerformanceTestConsoleApp.csproj
+++ b/PerformanceTestConsoleApp/PerformanceTestConsoleApp.csproj
@@ -6,6 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="hugesequence.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="hugesequence.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.0" />
   </ItemGroup>
 
