Use in memory cache when debugging

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,5 +1,6 @@
 {
   "UseInMemoryDatabase": true,
+  "UseInMemoryCache": true,
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=mercadolibre_challengeDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
