--- a/tests/PerformanceTestConsoleApp/PerformanceTestConsoleApp.csproj
+++ b/tests/PerformanceTestConsoleApp/PerformanceTestConsoleApp.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\src\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
