--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,10 +28,10 @@ jobs:
       
     - name: Run unit tests
       run: dotnet test
-
-    - name: Run automated unit and integration tests
-      run: dotnet test **/*Tests.dll
-
+      
+    - name: Run tests
+      run: dotnet test
+    
     - name: dotnet publish
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp ./src/WebUI/WebUI.csproj
 
