Add docker support

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "UseInMemoryDatabase": true,
+  //"UseInMemoryDatabase": true,
   "UseInMemoryCache": true,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=mercadolibre_challengeDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=db;Database=master;User=sa;Password=Your_password123;"
   },
   "Logging": {
     "LogLevel": {
